# ChangeLog for net-p2p/azureus-bin
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/azureus-bin/Attic/ChangeLog,v 1.1 2003/11/26 05:34:17 luke-jr Exp $

*azureus-bin-2.0.3.2 (26 Nov 2003)

  26 Nov 2003; Luke-Jr <luke-jr@gentoo.org> azureus-bin-2.0.3.2.ebuild,
  metadata.xml, files/azureus.sh:
  Initial ebuild
