@@ -1,5 +1,5 @@
+MD5 9fab342a5ebc11b5893b7c793044c6a8 azureus-bin-2.0.3.2-r1.ebuild 1129
 MD5 80a944522508f140931083bb409ee54f metadata.xml 216
-MD5 8bc9d13be441efa6e2479b8ca979e30f ChangeLog 381
-MD5 3dcc920343bb6a210ef9f3ff2b8c1258 azureus-bin-2.0.3.2.ebuild 1126
-MD5 8d4f7c6e5a7a6d96d189bdc445d71a3f files/digest-azureus-bin-2.0.3.2 148
-MD5 dae7bf22191a1f7a32c623ff2239ffee files/azureus.sh 528
+MD5 36d804c2eb745710edc109a583e571bb ChangeLog 550
+MD5 9870c231fe6ae72d22bd4b34a86bc204 files/azureus.sh 594
+MD5 8d4f7c6e5a7a6d96d189bdc445d71a3f files/digest-azureus-bin-2.0.3.2-r1 148
