@@ -14,9 +14,9 @@ while [ $run -gt 0 ]
 do
 	java -cp Azureus2.jar:swt.jar:swt-pi.jar:systray4j.jar:commons-cli-1.0.jar \
 	-Djava.library.path="$AZDIR:$AZDIR/lib" org.gudy.azureus2.ui.common.Main $*
-	if [ -f Azureus2-new.jar ]
+	if [ -f Azureus2-new.jar ] || [ -f ~/.azureus/Azureus2-new.jar ]
 	then
-		rm Azureus2-new.jar
+		rm Azureus2-new.jar ~/.azureus/Azureus2-new.jar
 		xmessage -center 'Please upgrade Azureus using Portage.'
 	else
 		run=0
