@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/azureus-bin
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/azureus-bin/Attic/ChangeLog,v 1.1 2003/11/26 05:34:17 luke-jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/azureus-bin/Attic/ChangeLog,v 1.2 2003/12/10 22:54:03 luke-jr Exp $
+
+*azureus-bin-2.0.3.2-r1 (10 Dec 2003)
+
+  10 Dec 2003; Luke-Jr <luke-jr@gentoo.org> azureus-bin-2.0.3.2-r1.ebuild,
+  files/azureus.sh:
+  Fixed a bug with upgrade notice
 
 *azureus-bin-2.0.3.2 (26 Nov 2003)
 
